// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > modelCard > searchModels > all filters 1`] = `
[
  {
    "$text": {
      "$search": "search",
    },
    "metadata.highLevelDetails.tags": {
      "$all": [
        "library",
        "task",
      ],
    },
  },
]
`;

exports[`services > modelCard > searchModels > no filters 1`] = `
[
  {},
]
`;

exports[`services > modelCard > searchModels > task no library 1`] = `
[
  {
    "metadata.highLevelDetails.tags": {
      "$all": [
        "task",
      ],
    },
  },
]
`;
